# agent-wiki

./: .env.example  .gitignore  CLAUDE.md  _fix2.vbs  _fix_pg.bat  _fix_pg.vbs  _fix_pg_auth.py  _fix_pg_log.txt  _restart.vbs  _run_log - 複製.bat  _run_now.bat  _run_py.bat  _run_tests.py  _setup_and_test.bat  _test_log.txt  pyproject.toml
.claude/commands/: checkpoint.md  checkservice.md
api/: blueprint.md  config.py  database.py  dependencies.py  llm.py  main.py
api/routers/: admin_architecture.py  admin_auth.py  admin_dashboard.py  admin_documents.py  admin_ingest.py  admin_jobs.py  admin_settings.py  admin_wiki.py  checkin.py  health.py  query.py  wiki_public.py
backend/: admin.html  blueprint.md
db/: migration_001_init.sql
docs/: CHANGELOG.md  INTRO.md  SETUP.md  TODO.md
docs/design/: ARCHITECTURE.html  ARCHITECTURE.md  SDD.md  TASK.md
frontend/: blueprint.md  index.html
job/: blueprint.md  inbox_scan.py  ingest.py  lint.py  parsers.py  scheduler.py
raw/: Portal_20260209.md
templates/: concept.md  operation.md  source.md
tests/: e2e_test.py  run_tests.py
wiki/: WIKI-RULES.md  index.md  log.md  overview.md
wiki/architecture/: portal-environments.md  portal-infra.md
wiki/concepts/: portal-backend-modules.md  portal-event-status.md  portal-page-status.md
wiki/operations/: portal-jobs.md  portal-monitoring.md
wiki/sources/: Portal_20260209.md
