[project]
name = "agent-wiki"
version = "0.1.0"
description = "智能知識庫管理系統（ATWK）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "external", "job"]

[tool.hatch.build.targets.editable]
packages = ["api", "external", "job"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
